--- a/index.html
+++ b/index.html
@@ -84,10 +84,10 @@
   <section class="container-fluid text-center trans-4" id="ourStory">
     <div class="row py-5">
       <div class="p-0 col-lg-3 col-sm-6 order-lg-1 order-sm-2 border">
-        <img class="w-100" src="assets/our-story/story-left.svg" alt="">
+        <img class="w-100" src="assets/our-story/story-left.jpg" alt="">
       </div>
 
-      <div class="col-lg-6 col-sm-12 order-lg-2 order-sm-1  py-3">
+      <div class="col-lg-6 col-sm-12 order-lg-2 order-sm-1 py-3 my-auto">
         <h1 class="text-headline text-pink text-nanum pb-3">our story</h1>
         <p class="px-3 text-dark-green">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ipsum architecto
           reprehenderit ad magni eius, consequatur non nobis adipisci ducimus tempore eum. Saepe, ipsa? Inventore
@@ -96,7 +96,7 @@
       </div>
 
       <div class="p-0 col-lg-3 col-sm-6 order-lg-3 order-sm-3 border">
-        <img class="w-100" src="assets/our-story/story-right.svg" alt="">
+        <img class="w-100" src="assets/our-story/story-right.jpg" alt="">
       </div>
 
     </div>
