--- a/index.html
+++ b/index.html
@@ -101,20 +101,20 @@
 
     </div>
 
-    <div class="text-center">
+    <!-- <div class="text-center">
       <button class="btn btn-success" onclick="testAnimate()">test</button>
       <button class="btn btn-danger" onclick="testDeleteAnimation()">reset</button>
-    </div>
+    </div> -->
 
   </section> <!-- END OUR STORY -->
 
   <!-- OUR CREATION -->
   <section class="container-fluid bg-pink my-5 trans-4" id="ourCreation">
     <div class="container">
-      
+
       <div class="position-relative">
-          <div class="position-absolute text-headline text-nanum text-dark-green px-4 center-overlay" id="creation">our
-              creation</div>
+        <div class="position-absolute text-headline text-nanum text-dark-green px-4 center-overlay" id="creation">our
+          creation</div>
 
         <!-- OUR CREATION GALLERY -->
         <div id="ourCreationGallery"></div> <!-- END OUR CREATION GALLERY -->
