--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 
         <!--  NAVBAR COLLAPSE  -->
         <div class="collapse navbar-collapse" id="navbarCollapse">
-          <ul class="navbar-nav ml-auto h4">
+          <ul class="navbar-nav ml-auto h4 text-sm-center">
 
             <li class="nav-item px-2">
               <a class="nav-link text-dark-green" href="#">home</a>
@@ -83,19 +83,19 @@
   <!-- OUR STORY -->
   <section class="container-fluid text-center trans-4" id="ourStory">
     <div class="row py-5">
-      <div class="p-0 col-lg-3 col-sm-6 order-lg-1 order-sm-2 border">
+      <div class="p-0 col-3 d-lg-block d-sm-none">
         <img class="w-100" src="assets/our-story/story-left.jpg" alt="">
       </div>
 
-      <div class="col-lg-6 col-sm-12 order-lg-2 order-sm-1 py-3 my-auto">
-        <h1 class="text-headline text-pink text-nanum pb-3">our story</h1>
+      <div class="col-lg-6 col-sm-12 my-auto">
+        <h1 class="text-headline text-pink text-nanum">our story</h1>
         <p class="px-3 text-dark-green">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ipsum architecto
           reprehenderit ad magni eius, consequatur non nobis adipisci ducimus tempore eum. Saepe, ipsa? Inventore
           suscipit rem pariatur exercitationem hic voluptates ab doloribus distinctio a ex iusto, quis, commodi quasi
           vero!</p>
       </div>
 
-      <div class="p-0 col-lg-3 col-sm-6 order-lg-3 order-sm-3 border">
+      <div class="p-0 col-3 d-lg-block d-sm-none">
         <img class="w-100" src="assets/our-story/story-right.jpg" alt="">
       </div>
 
@@ -113,15 +113,14 @@
     <div class="container">
 
       <div class="position-relative">
-        <div class="position-absolute text-headline text-nanum text-dark-green px-4 center-overlay" id="creation">our
-          creation</div>
+        <div class="position-absolute" id="creation">
+          <p class="text-center mb-0 text-headline text-nanum text-dark-green">our creation</p>
+        </div>
 
         <!-- OUR CREATION GALLERY -->
         <div id="ourCreationGallery"></div> <!-- END OUR CREATION GALLERY -->
 
-        <div class="row" id="ourCreationImages">
-
-        </div>
+        <div class="row" id="ourCreationImages"></div>
 
       </div>
     </div>
@@ -170,19 +169,24 @@
 
         <!-- CONTACT  -->
         <div class="col-6 pt-4">
-          <div class="row pb-3 align-items-center">
+          <div class="row align-items-center">
             <div class="px-0 col-2 text-center"><i class="text-white fas py-2 fa-2x fa-map-marker-alt"></i></div>
-            <div class="px-0 col-10 text-dark-green">Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae
-              mollitia voluptates
-              maiores necessitatibus ab. Illum!</div>
+            <div class="px-0 col-10 text-dark-green">
+              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae mollitia voluptates maiores
+                necessitatibus ab. Illum!</p>
+            </div>
           </div>
-          <div class="row pb-3 align-items-center">
+          <div class="row align-items-center">
             <div class="px-0 col-2 text-center"><i class="text-white fas py-2 fa-2x fa-mobile-alt"></i></div>
-            <div class="px-0 col-10 text-dark-green">+6284736300908</div>
+            <div class="px-0 col-10 text-dark-green">
+              <p>+6284736300908</p>
+            </div>
           </div>
-          <div class="row pb-3 align-items-center">
+          <div class="row align-items-center">
             <div class="px-0 col-2 text-center"><i class="text-white fas py-2 fa-2x fa-envelope"></i></div>
-            <div class="px-0 col-10 text-dark-green">random@mail.com</div>
+            <div class="px-0 col-10 text-dark-green">
+              <p>random@mail.com</p>
+            </div>
           </div>
 
         </div> <!-- END CONTACT  -->
