--- a/index.html
+++ b/index.html
@@ -40,16 +40,16 @@
           <ul class="navbar-nav ml-auto h4 text-sm-center">
 
             <li class="nav-item px-2">
-              <a class="nav-link text-dark-green" href="#home">home</a>
+              <a class="nav-link text-dark-green position-relative" href="#home">home</a>
             </li>
             <li class="nav-item px-2">
-              <a class="nav-link text-dark-green" href="#ourStory">our story</a>
+              <a class="nav-link text-dark-green position-relative" href="#ourStory">our story</a>
             </li>
             <li class="nav-item px-2">
-              <a class="nav-link text-dark-green" href="#ourCreation">our creation</a>
+              <a class="nav-link text-dark-green position-relative" href="#ourCreation">our creation</a>
             </li>
             <li class="nav-item px-2">
-              <a class="nav-link text-dark-green" href="#contact">contact</a>
+              <a class="nav-link text-dark-green position-relative" href="#contact">contact</a>
             </li>
 
           </ul>
@@ -109,7 +109,7 @@
   </section> <!-- END OUR STORY -->
 
   <!-- OUR CREATION -->
-  <section class="container-fluid bg-pink my-5 trans-4" id="ourCreation">
+  <section class="container-fluid bg-pink mb-5 trans-4" id="ourCreation">
     <div class="container">
 
       <div class="position-relative">
@@ -136,7 +136,9 @@
 
       <!-- CAROUSEL -->
       <div id="carouselTesti" class="carousel slide pb-3" data-ride="carousel">
-        <div class="carousel-inner" id="carouselTestiData">
+        <div class="carousel-inner">
+
+          <div id="carouselTestiData"></div>
 
         </div>
         <!-- CONTROL -->
