--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
       <nav class="navbar navbar-expand-lg navbar-light">
 
         <a class="navbar-brand" href="/">
-          <img src="assets/keeki-logo.svg">
+          <img src="assets/keeki-logo.svg" alt="keeki logo">
         </a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse"
           aria-controls="navbar-collapse" aria-expanded="false" aria-label="Toggle navigation">
@@ -135,7 +135,7 @@
       <h1 class="text-headline text-center text-nanum pb-2">testimonials</h1>
 
       <!-- CAROUSEL -->
-      <div id="carouselTesti" class="carousel slide pb-3" data-ride="carousel">
+      <div id="carouselTesti" class="carousel slide pb-4" data-ride="carousel">
         <div class="carousel-inner">
 
           <div id="carouselTestiData"></div>
@@ -164,43 +164,60 @@
         <i class="fas fa-chevron-up"></i>
       </div>
     </a>
-    <div class="container py-5">
-      <img class="pt-5" src="assets/keeki-logo.svg" alt=""><br>
+    <div class="container py-5 text-lg-left text-sm-center">
+      <img class="pt-5" src="assets/keeki-logo.svg" alt="keeki logo"><br>
 
       <div class="row">
 
         <!-- CONTACT  -->
-        <div class="col-6 pt-4">
-          <div class="row align-items-center">
-            <div class="px-0 col-2 text-center"><i class="text-white fas py-2 fa-2x fa-map-marker-alt"></i></div>
-            <div class="px-0 col-10 text-dark-green">
-              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae mollitia voluptates maiores
-                necessitatibus ab. Illum!</p>
+        <div class="col-lg-6 col-sm-12 pt-4 text-lg-left text-sm-center">
+
+          <a href="#">
+            <div class="row pb-2 align-items-center">
+              <div class="px-0 col-lg-2 col-sm-12 text-center">
+                <i class="text-white py-lg-0 py-sm-3 fas fa-2x fa-map-marker-alt"></i>
+              </div>
+              <div class="px-0 col-lg-10 col-sm-12 text-dark-green">
+                <p class="mb-0">Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae mollitia voluptates
+                  maiores
+                  necessitatibus ab. Illum!</p>
+              </div>
             </div>
-          </div>
-          <div class="row align-items-center">
-            <div class="px-0 col-2 text-center"><i class="text-white fas py-2 fa-2x fa-mobile-alt"></i></div>
-            <div class="px-0 col-10 text-dark-green">
-              <p>+6284736300908</p>
+          </a>
+
+          <a href="#">
+            <div class="row pb-2 align-items-center">
+              <div class="px-0 col-lg-2 col-sm-12 text-center"><i
+                  class="text-white py-lg-0 py-sm-3 fas fa-2x fa-mobile-alt"></i></div>
+              <div class="px-0 col-lg-10 col-sm-12 text-dark-green">
+                <p class="mb-0">+6284736300908</p>
+              </div>
             </div>
-          </div>
-          <div class="row align-items-center">
-            <div class="px-0 col-2 text-center"><i class="text-white fas py-2 fa-2x fa-envelope"></i></div>
-            <div class="px-0 col-10 text-dark-green">
-              <p>random@mail.com</p>
+          </a>
+
+          <a href="mailto:random@mail.com">
+            <div class="row pb-2 align-items-center">
+              <div class="px-0 col-lg-2 col-sm-12 text-center"><i
+                  class="text-white py-lg-0 py-sm-3 fas fa-2x fa-envelope"></i></div>
+              <div class="px-0 col-lg-10 col-sm-12 text-dark-green">
+                <p class="mb-0">random@mail.com</p>
+              </div>
             </div>
-          </div>
+          </a>
+
 
         </div> <!-- END CONTACT  -->
 
-        <div class="col-6 text-right">
+        <div class="col-lg-6 col-sm-12 pt-4 text-lg-right text-sm-center">
           <div>
-            <a href="#"><img class="socmed pl-2" src="assets/icon/fb.svg" alt=""></a>
-            <a href="#"><img class="socmed pl-2" src="assets/icon/ig.svg" alt=""></a>
+            <a href="#"><img class="socmed pl-3" src="assets/icon/fb.svg" alt=""></a>
+            <a href="#"><img class="socmed pl-3" src="assets/icon/ig.svg" alt=""></a>
           </div>
           <div class="text-dark-green pt-4">
-            <p class="text-nanum h1 mb-0">hours</p>
-            <p class="mb-0">monday - friday <br> 10 am - 6 pm</p>
+            <p class="text-nanum h1 mb-0 d-lg-block d-sm-inline-block">hours</p>
+            <p class="mb-0 pl-lg-0 pl-sm-3 d-lg-block d-sm-inline-block text-lg-right text-sm-left">monday - friday <br>
+              10 am - 6 pm
+            </p>
             <p class="h3 text-nanum" id="openHours"></p>
           </div>
 
@@ -223,7 +240,6 @@
   <script src="js/data.js"></script>
   <script src="js/featherlight.js"></script>
   <script src="js/featherlight.gallery.js"></script>
-
   <script src="js/keeki.js"></script>
 </body>
 
