--- a/index.html
+++ b/index.html
@@ -81,13 +81,13 @@
   </section>
 
   <!-- OUR STORY -->
-  <section class="container-fluid text-center trans-4" id="ourStory">
-    <div class="row py-5">
-      <div class="p-0 col-3 d-lg-block d-sm-none">
+  <section class="container-fluid text-center trans-4 py-5" id="ourStory">
+    <div class="row py-5 ">
+      <div class="p-0 col-3 d-lg-block d-sm-none wow fadeInLeft" data-wow-delay="0.4s">
         <img class="w-100" src="assets/our-story/story-left.jpg" alt="">
       </div>
 
-      <div class="col-lg-6 col-sm-12 my-auto">
+      <div class="col-lg-6 col-sm-12 my-auto wow fadeInUp" data-wow-delay="0.4s">
         <h1 class="text-headline text-pink text-nanum">our story</h1>
         <p class="px-3 text-dark-green">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ipsum architecto
           reprehenderit ad magni eius, consequatur non nobis adipisci ducimus tempore eum. Saepe, ipsa? Inventore
@@ -95,21 +95,16 @@
           vero!</p>
       </div>
 
-      <div class="p-0 col-3 d-lg-block d-sm-none">
+      <div class="p-0 col-3 d-lg-block d-sm-none wow fadeInRight" data-wow-delay="0.4s">
         <img class="w-100" src="assets/our-story/story-right.jpg" alt="">
       </div>
 
     </div>
 
-    <!-- <div class="text-center">
-      <button class="btn btn-success" onclick="testAnimate()">test</button>
-      <button class="btn btn-danger" onclick="testDeleteAnimation()">reset</button>
-    </div> -->
-
   </section> <!-- END OUR STORY -->
 
   <!-- OUR CREATION -->
-  <section class="container-fluid bg-pink mb-5 trans-4" id="ourCreation">
+  <section class="container-fluid bg-pink mb-5 trans-4 wow fadeInLeft" data-wow-delay="0.4s" id="ourCreation">
     <div class="container">
 
       <div class="position-relative">
@@ -128,7 +123,7 @@
   </section> <!-- END OUR CREATION -->
 
   <!-- TESTIMONIALS -->
-  <section class="container-fluid bg-dark-green trans-4" id="ourTestimonial">
+  <section class="container-fluid bg-dark-green trans-4 wow fadeInRight" data-wow-delay="0.4s" id="ourTestimonial">
 
     <div class="container text-green">
 
@@ -240,6 +235,7 @@
   <script src="js/data.js"></script>
   <script src="js/featherlight.js"></script>
   <script src="js/featherlight.gallery.js"></script>
+  <script src="js/wow.min.js"></script>
   <script src="js/keeki.js"></script>
 </body>
 
